# homeauto

./: .gitignore  README.md  bedlight.cron  homeSwitchWeb.py  rf433mhz.py
ethernet/: CMakeLists.txt  IR.cpp  IR.h  ethernet.ino  homeauto_remote.fzz  local_stats.html
ethernet/ENC28J60/: EncClient.cpp  EncClient.h  EncEthernet.cpp  EncEthernet.h  EncServer.cpp  EncServer.h
ethernet/ENC28J60/utility/: enc28j60.c
mega8/: CMakeLists.txt  mega8.ino
tiny_i2c_433/: CMakeLists.txt  RemoteSwitch.c  RemoteTransmitter.c  RemoteTransmitter.h  avr_crosscompile.cmake
